Issue #28752: Restored the __reduce__() methods of datetime objects.